# styleguide

./: .gitignore  .styleguide  .styleguide-license  .travis.yml  .wpiformat  CONTRIBUTING.md  README.md  appveyor.yml  azure-pipelines.yml  clangformat.py  cppguide.html  cppguide.js  cpplint.patch  cpplint.py  diff-cpplint.py  diff_cpplint.py  format.py  formatw.py  includeorder.py  intellij-java-google-style.xml  javaguide.html  licenseupdate.py  lint.py  namespace.py  naming.md  newline.py  publish-wpiformat.sh  pyformat.py  pyguide.html  stdlib.py  task.py  unittest.py  update-cpplint.py  update_cpplint.py  whitespace.py
.github/workflows/: ci.yml
docker/: Dockerfile
examples/: .styleguide-license
ide/: eclipse-cpp-google-style.xml  eclipse-java-google-style.xml  intellij-java-google-style.xml
wpiformat/: README.md  README.rst  pyproject.toml  setup.py  tox.ini
wpiformat/examples/: .styleguide  .wpiformat  .wpiformat-license
wpiformat/test/: tasktest.py  test_bracecomment.py  test_cidentlist.py  test_commentformat.py  test_config.py  test_eofnewline.py  test_gtestname.py  test_includeguard.py  test_includeorder.py  test_javaclass.py  test_jni.py  test_licenseupdate.py  test_namespace.py  test_newline.py  test_stdlib.py  test_task.py  test_tasktest.py  test_usingdeclaration.py  test_usingnamespacestd.py  test_whitespace.py
wpiformat/wpiformat/: __init__.py  __main__.py  bracecomment.py  bracenewline.py  cidentlist.py  clangformat.py  clangtidy.py  cmakeformat.py  commentformat.py  config.py  cpplint.py  eofnewline.py  gtestname.py  htmlformat.py  includeguard.py  includeorder.py  javaclass.py  javaformat.py  jni.py  licenseupdate.py  lint.py  namespace.py  newline.py  pyformat.py  stdlib.py  task.py  usingdeclaration.py  usingnamespacestd.py  version.py  virtualspecifier.py  whitespace.py  xmlformat.py
wpiformat/wpiformat/test/: tasktest.py  tempdir.py  test_bracecomment.py  test_bracenewline.py  test_cidentlist.py  test_commentformat.py  test_config.py  test_eofnewline.py  test_gtestname.py  test_includeguard.py  test_includeorder.py  test_javaclass.py  test_jni.py  test_licenseupdate.py  test_newline.py  test_stdlib.py  test_tasktest.py  test_tempdir.py  test_usingdeclaration.py  test_usingnamespacestd.py  test_virtualspecifier.py  test_whitespace.py
